fix some warnings
mostly use of deprecated API due to use of higher version of java
also some oracle calls